# BDSIM4CEPC

./: .cproject  .cvsignore  .gitignore  .gitmodules  .project  BDSInput.cards  BDS_gui.mac  BDS_run.cc  BDS_vis.mac  CMakeLists.txt  CTestConfig.cmake  FindCLHEP.cmake  FindGeant4.cmake  FindROOT.cmake  FindXercesC.cmake  LOG  Makefile  Makefile.in  README  README.md  UseGeant4.cmake  bdsim.cc  configure  doxygen.cnf  doxygen.cnf.in  env.csh  ilc_BDS.optics  joboptions_cal.csh  manual.texi  startup.csh  submit_cal.sh  vis.mac  visOIX.mac
examples/: .gitignore  CMakeLists.txt  LBQ-KEK.MAP  README  atf.gmad  atf_buggy.gmad  atf_optics.gmad  atf_optics.gmad~  e.geo  e1.geo  examples.rst  jctest.gmad  mars-field.f  mars-field.f~  mk.geo  optics.gmad  options.gmad  output.root  output.txt  test.gmad  test1.gmad  vis.mac
examples/3d/: CMakeLists.txt  line.gmad  output.txt  vis.mac
examples/ATF2/: ATF2.echo  ATF2.mad  ATF2_common.xsif  ATF2lat_BX10BY1m.gmad  ATF2lat_BX10BY1m.saveline  ATF_full_20130520.tiff  CMakeLists.txt  EXT.xsif  FF.mad  FF.xsif  atf.gmad  atf2.gmad  atf2.rst  options.gmad  samplers.gmad  vis.mac
examples/ATF2_new/: ATF2lat_BX10BY1m.gmad  README  atf.gmad  atf2.gmad  options.gmad  vis.mac
examples/ATF2_old/: CMakeLists.txt  atf.gmad  atf_optics.gmad
examples/Components/: .gitignore  BeamTester.py  Builder.py  ComponentTester.py  RingBuilder.py  Tester.py  beam.gmad  drift.gmad  elec.gmad  elec_gaus.gmad  elec_ref.gmad  gmad  lattice.gmad  options.gmad  quad.gmad  sole.gmad  vis.mac
examples/Components_DB/: CMakeLists.txt  csampler.gmad  deca.gmad  decaTest.gmad  driftTest.gmad  gdml.gmad  gmad  hkick.gmad  hkickTest.gmad  laser.gmad  mult.gmad  multTest.gmad  musp.gmad  oct.gmad  octTest.gmad  pcldrift.gmad  pcldriftTest.gmad  quad.gmad  quadOffset.gmad  rben.gmad  rbenTest.gmad  rcol.gmad  rcolTest.gmad  rf.gmad  sampler.gmad  sben.gmad  sbenTest.gmad  sext.gmad  sole.gmad  soleTest.gmad  tunnel.gmad  vis.mac
examples/FNAL-ILC/: dump.gmad  dump_line.gmad  dump_line.gmad~  dump_line.mad  output.txt
examples/Fluka/: materials.inp
examples/ILC/: ebds1.gmad  ebds1.gmad~  ebds1.mad  ebds1.optics  ebds1_save.mad  ebsy.mad  ebsy.xsif  ebsyd.gxsif  ebsyd.mad  ebsyd.xsif  edl1.gxsif  edl1.gxsif~  edl1.mad  edl1.xsif  eff1.gxsif  eff1.gxsif.old  eff1.gxsif~  eff1.mad  eff1.xsif  eff1_.html  eirt1.gxsif  eirt1.gxsif~  eirt1.mad  eirt1.xsif  ilc.rst  options.gmad  options.gmad~  output.root  output.txt  test  vis.mac
examples/ILC-20mrad-extraction/: 20mrad.gmad
examples/LHC/: .gitignore  CMakeLists.txt  lhc.gmad  lhc.rst  lhc_4tev_b1.gmad  lhc_4tev_b1_output.txt  lhc_4tev_b2.gmad  lhc_4tev_b2_output.txt  run.py  twiss.3.5tev.b2.gmad  twiss.4.0tev.b1.gmad  twiss.4.0tev.b2.gmad  vis.mac
examples/LHC_new/: lhc.gmad  myanalysis.py  output.dat.txt  output.txt  twiss.3.5tev.b2.gmad  twiss.4.0tev.b1.gmad  twiss.4.0tev.b2.gmad  vis.mac
examples/Laser-Wire/: CMakeLists.txt  README  cryo1.sql  lw.gmad
examples/Mokka/: CMakeLists.txt
examples/SR/: CMakeLists.txt  line.gmad  vis.mac
examples/collimators/: README~  cebsye.sql
examples/detector/: lead_plate100mm_geomlist.sql  lead_plate1mm_geomlist.sql  lead_plate200mm_geomlist.sql  lead_plate20mm.sql  lead_plate20mm_geomlist.sql  lead_plate30mm.sql  lead_plate30mm_geomlist.sql  lead_plate3mm.sql  lead_plate40mm.sql  lead_plate40mm_geomlist.sql  lead_plate41mm.sql  lead_plate41mm_geomlist.sql  lead_plate42mm.sql  lead_plate42mm_geomlist.sql  lead_plate43mm_geomlist.sql  lead_plate44mm.sql  lead_plate44mm_geomlist.sql  lead_plate46mm.sql  lead_plate46mm_geomlist.sql  lead_plate47mm.sql  lead_plate47mm_geomlist.sql  lead_plate48mm.sql  lead_plate49mm.sql  lead_plate4mm_geomlist.sql  lead_plate50mm.sql  lead_plate50mm_geomlist.sql  lead_plate52mm_geomlist.sql  lead_plate54mm.sql  lead_plate54mm_geomlist.sql  lead_plate5mm_geomlist.sql  lead_plate70mm_geomlist.sql  lead_plate80mm.sql  lead_plate80mm_geomlist.sql
examples/features/: CMakeLists.txt  README  features.rst
examples/fodoRing/: fodoRing.gmad  fodoRing_beam.gmad  fodoRing_components.gmad  fodoRing_options.gmad  fodoRing_sequence.gmad
examples/gasPipe/: CMakeLists.txt
examples/ggmad/: CMakeLists.txt  colli.geo  line.gmad
examples/hadronicTarget/: CMakeLists.txt  hadronicTarget.gmad
examples/polchic/: BDS_common.gxsif  ebsy1_0W.gxsif  ebsy1_0W.gxsif~  pol1_det10mm.gmad  pol1_det1mm.gmad  pol1_det20mm.gmad  pol1_det30mm.gmad  pol1_det35mm.gmad  pol1_det40mm.gmad  pol1_det45mm.gmad  pol1_det50mm.gmad  pol1_options.gmad  pol1_options.gmad~
examples/rbendTarget/: CMakeLists.txt  options.gmad  rbendTarget.gmad  vis.mac
examples/simpleMachine/: CMakeLists.txt  distributioncheck.gmad  simpleMachine.rst  sm.gmad  vis.mac
examples/simplemachine/: CMakeLists.txt  sm.gmad
examples/twissGen/: CMakeLists.txt  fileList.txt  twissGen.gmad
parser/: .cvsignore  ATF2.madx  ATF2.madx~  CMakeLists.txt  Makefile  Makefile~  README  array.cc  array.h  atf.gmad  atf_optics.gmad  cavitymodel.cc  cavitymodel.h  ebdh_250GeV.mad  ebdh_250GeV.mad~  ebdh_250GeV_initial.xsif  ebds1.gmad  ebsy.gxsif  eff1.gxsif  element.cc  element.h  elementlist.cc  elementlist.h  elementtype.cc  elementtype.h  enums.cc  enums.h  fastlist.h  getEnv.cc  getEnv.h  gmad.cc  gmad.cc~  gmad.h  gmad.h~  lex.yy.c  libgmad.dylib  log  mad2gmad.sh  mad2gmad.sh~  nlc000.nlc_common.xsif  (+51 more)
parser/test/: CMakeLists.txt  accessMissingAttribute.gmad  accessattribute.gmad  accesselement.gmad  accesselementoutsiderange.gmad  addSamplerUndefinedElement.gmad  addallsamplers.gmad  addquadsamplers.gmad  addsampler.gmad  array.gmad  arraystring.gmad  duplicateName.gmad  elementnoargs.gmad  extend.gmad  inherit.gmad  nosemicolon.gmad  overwriteElement.gmad  (+10 more)
test/: BDSBunchTest.cc  BDSBunchTest.py  BDSHistogramTest.cc  CMakeLists.txt
utils/: CMakeLists.txt  EXT.mad  EXT.xsif  LBQ-FNAL.MAP  README  atf.gmad  bdsimrun  changeparameter.sh  convert_map  convert_map.cc  convert_map.cc~  ebds_job.gmad  mad2gmad.py  mad2gmad.sh  mad2gmad.sh~  madx2gmad.py  submit_jobs  test  test,map  test.gmad  test.mad
(+1900 files in other folders)
